# cpp-skeleton

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: config.json
controller/: CMakeLists.txt  controller.cpp  controller.h
manager/: CMakeLists.txt  img_manager.cpp  img_manager.h
service/: CMakeLists.txt  img_service.cpp  img_service.h
storage/: storage.h
typedef/: typedef.h
utils/base/: CMakeLists.txt  util_time.cpp  util_time.h
utils/cache/: lrucache.hpp
utils/codec/: CMakeLists.txt  base64.cpp  base64.h
utils/config/: CMakeLists.txt  chameleon.cpp  chameleon.h  util_config.cpp  util_config.h
utils/const/: util_const.h
utils/error/: CMakeLists.txt  error_const.h  util_error.cpp  util_error.h
utils/serialize/: serialization.h  static_reflection.h
